[tool.poetry]
name = "Aivis"
version = "1.0.0"
description = "Aivis: AI Voice Imitation System"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
demucs = "^4.0.1"
faster-whisper = "0.10.1"
gradio = "^4.16.0"
librosa = "0.9.2"  # Bert-VITS2 は librosa 0.10.x に対応していない
nvidia-cublas-cu11 = "^11.11.3.6"
pydub = "^0.25.1"
pyloudnorm = "^0.1.1"
regex = "^2023.10.3"
soundfile = "^0.12.1"
stable-ts = "^2.15.2"
torch = "^2.1.1"
torchaudio = "^2.1.1"
torchvision = "^0.16.1"
typer = {extras = ["all"], version = "^0.9.0"}
# Bert-VITS2 dependencies
amfm-decompy = "^1.0.11"
av = "==10.*"
cmudict = "^1.0.16"
cn2an = "^0.5.22"
ffmpeg-python = "^0.2.0"
fugashi = "^1.3.0"
g2p-en = "^2.1.0"
gputil = "^1.4.0"
jaconv = "^0.3.4"
jieba = "^0.42.1"
langid = "^1.1.6"
loguru = "^0.7.2"
matplotlib = "^3.8.2"
mecab-python3 = "^1.0.8"
num2words = "^0.5.13"
numba = "^0.58.1"
numpy = "^1.26.2"
phonemizer = "^3.2.1"
psutil = "^5.9.7"
pykakasi = "^2.2.1"
pyopenjtalk-prebuilt = "^0.3.0"
pypinyin = "^0.50.0"
pyyaml = "^6.0.1"
requests = "^2.31.0"
scipy = "^1.11.4"
sentencepiece = "^0.1.99"
tensorboard = "^2.15.1"
transformers = "^4.36.2"
unidecode = "^1.3.7"
unidic-lite = "^1.0.8"
vector-quantize-pytorch = "^1.12.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
